--- a/examples/jammy/dotnet/hello-world/src/debian/tests/control
+++ b/examples/jammy/dotnet/hello-world/src/debian/tests/control
@@ -1,7 +1,7 @@
 # These tests are run by autopkgtests
 
 Tests: tests
-Depends: @, shunit2, which
+Depends: @, shunit2
 
 Tests: tests-with-dotnet
-Depends: @, shunit2, which, aspnetcore-runtime-8.0
+Depends: @, shunit2, aspnetcore-runtime-8.0
