--- a/examples/jammy/java-gradle/hello-world/src/debian/tests/control
+++ b/examples/jammy/java-gradle/hello-world/src/debian/tests/control
@@ -1,16 +1,16 @@
 # These tests are run by autopkgtests
 
 Tests: tests-without-java
-Depends: @, shunit2, which
+Depends: @, shunit2
 Restrictions: allow-stderr
 
 # Don't know why, but it can be used with openjre
 Tests: tests-with-open-jre
-Depends: @, shunit2, which, openjdk-17-jre
+Depends: @, shunit2, openjdk-17-jre
 
 # generally it is not a good idea to test as a root
 # better to define third-party repository which depends can be installed from
 Tests: tests-with-oracle-jre
-Depends: @, shunit2, which, curl, ca-certificates
+Depends: @, shunit2, curl, ca-certificates
 Restrictions:needs-root # for installing oracle-jre
 
