--- a/examples/noble/typescript/hello-world/src/debian/tests/control
+++ b/examples/noble/typescript/hello-world/src/debian/tests/control
@@ -1,8 +1,8 @@
 # These tests are run by autopkgtests
 
 Tests: tests
-Depends: @, shunit2, which
+Depends: @, shunit2
 
 Tests: tests-with-node
-Depends: @, shunit2, which, curl, ca-certificates
+Depends: @, shunit2, curl, ca-certificates
 Restrictions:needs-root 
