--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           sudo apt-get update
           # Note this is an older version of sbuild, no need to patch it, yet
-          sudo apt install -y debhelper schroot ubuntu-dev-tools piuparts
+          sudo apt install -y debhelper schroot ubuntu-dev-tools 
           sudo apt-get -y install pkg-config libssl-dev uidmap
           sudo apt-get install -y libfilesys-df-perl libmime-lite-perl
           wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6-1/sbuild_0.85.6_all.deb
@@ -61,7 +61,7 @@ jobs:
         run: |
           sudo apt-get update
           # Note this is an older version of sbuild, no need to patch it, yet
-          sudo apt install -y debhelper schroot ubuntu-dev-tools piuparts autopkgtest vmdb2 qemu-system-x86
+          sudo apt install -y debhelper schroot ubuntu-dev-tools autopkgtest vmdb2 qemu-system-x86
           sudo apt-get install -y pkg-config libssl-dev uidmap
           sudo apt-get install -y libfilesys-df-perl libmime-lite-perl
           # change this into actually built version and cache it
@@ -95,12 +95,12 @@ jobs:
           pkg-builder package --run-piuparts false  --run-autopkgtest false
 
 
-      - name: piuparts
-        run: |
-          # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
-          # sudo apt-get install -y debian-archive-keyring
-          cd examples/bookworm/${{matrix.language}}/hello-world
-          ${HOME}/.local/bin/pkg-builder piuparts
+      # - name: piuparts
+      #   run: |
+      #     # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
+      #     # sudo apt-get install -y debian-archive-keyring
+      #     cd examples/bookworm/${{matrix.language}}/hello-world
+      #     ${HOME}/.local/bin/pkg-builder piuparts
 
       - name: autopkgtest
         run: |
@@ -176,12 +176,12 @@ jobs:
           pkg-builder package --run-piuparts false --run-autopkgtest false
 
 
-      - name: piuparts
-        run: |
-          # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
-          # sudo apt-get install -y debian-archive-keyring
-          cd examples/jammy/${{matrix.language}}/hello-world
-          ${HOME}/.local/bin/pkg-builder piuparts
+      # - name: piuparts
+      #   run: |
+      #     # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
+      #     # sudo apt-get install -y debian-archive-keyring
+      #     cd examples/jammy/${{matrix.language}}/hello-world
+      #     ${HOME}/.local/bin/pkg-builder piuparts
 
       - name: autopkgtest
         run: |
