--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,39 +1,10 @@
-[package]
-name = "pkg-builder"
-version = "0.2.11"
-edition = "2021"
-build = "src/build.rs"
 
-[build-dependencies]
-eyre = "0.6.12"
-thiserror = "1.0.63"
-serde = { version = "1.0.209", features = ["derive"] }
-toml = "0.8.19"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-clap = { version = "4.5.4", features = ["derive"] }
-toml = "0.8.12"
-serde = { version = "1.0", features = ["derive"] }
-thiserror = "1.0"
-tempfile = "3.1"
-log = "0.4"
-env_logger = "0.11.3"
-git2 = "0.18.3"
-cargo_metadata = "0.18"
-test-case = "3.3.1"
-glob = "0.3.1"
-dirs = "5.0.1"
-rand = "0.9.0-alpha.1"
-shellexpand = "3.1.0"
-eyre = "0.6.12"
-sha2 = "0.11.0-pre.3"
-whoami = "1.5.1"
-sha1 = "0.11.0-pre.3"
-filetime = "0.2.23"
-regex = "1.10.4"
-
-[dev-dependencies]
-env_logger = "*"
-httpmock = "0.7.0"
+[workspace]
+members = [
+    "workspace/build",
+    "workspace/cli",
+    "workspace/common",
+    "workspace/debian",
+    "workspace/pkg-builder",
+]
+resolver = "2"
