--- a/workspace/packager_deb/Cargo.toml
+++ b/workspace/packager_deb/Cargo.toml
@@ -7,35 +7,26 @@ edition = "2021"
 name = "packager_deb"
 path = "src/mod.rs"
 
-[build-dependencies]
-thiserror = { workspace =  true }
-serde = { workspace =  true }
-toml = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-debian = { workspace = true}
-types = { workspace = true}
-toml = { workspace = true}
-serde = { workspace = true}
-thiserror = { workspace = true}
-tempfile = { workspace = true}
-log = { workspace = true}
-env_logger = { workspace = true}
-git2 = { workspace = true}
-test-case = { workspace = true}
-glob = { workspace = true}
-dirs = { workspace = true}
-rand = { workspace = true}
-shellexpand = { workspace = true}
-sha2 = { workspace = true}
-whoami = { workspace = true}
-sha1 = { workspace = true}
-filetime = { workspace = true}
-cargo_metadata = { workspace = true}
+debian = { workspace = true }
+types = { workspace = true }
+serde = { workspace = true }
+thiserror = { workspace = true }
+tempfile = { workspace = true }
+log = { workspace = true }
+dirs = { workspace = true }
+rand = { workspace = true }
+shellexpand = { workspace = true }
+sha2 = { workspace = true }
+sha1 = { workspace = true }
+filetime = { workspace = true }
+cargo_metadata = { workspace = true }
 
 
 [dev-dependencies]
-env_logger = "*"
-httpmock = "0.7.0"
+toml = { workspace = true }
+httpmock = { workspace = true }
+env_logger = { workspace = true }
