--- a/workspace/pkg_builder/Cargo.toml
+++ b/workspace/pkg_builder/Cargo.toml
@@ -10,9 +10,9 @@ path = "src/main.rs"
 
 
 [build-dependencies]
-thiserror = "1.0.63"
-serde = { version = "1.0.209", features = ["derive"] }
-toml = "0.8.19"
+thiserror = { workspace =  true }
+serde = { workspace = true }
+toml = { workspace = true }
 
 [dependencies]
 cli = { workspace =  true }
